--- a/style.css
+++ b/style.css
@@ -1,7 +1,66 @@
 .koru{
   height:100%;
+  background-image: url("/images/FernTransparent.png");
+  background-color: #82846D;
 }
 
-.bg {
-  background-image: url("Fern.jpg");
+.Main_Text_Container{
+  font-size:40px;
+}
+
+h1{
+  font-family:'Roboto Condensed', sans-serif;
+}
+
+h2{
+  font-family: 'Zen Antique', serif;
+}
+
+p{
+  font-family: 'Hind Siliguri', sans-serif;
+}
+.buttons_container{
+  width:30%;
+}
+.button_links {
+  appearance: none;
+  background-color: #FBFCFF;
+  border: 2px solid #F5F5F5;
+  border-radius: 10px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 10px;
+  font-family: 'Zen Antique', serif;
+  font-color: #3D3D3D;
+  line-height: normal;
+  margin: 0;
+  min-height: 50px;
+  min-width: 0;
+  outline: none;
+  padding: 0px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 50%;
+  height:20%;
+  will-change: transform;
+}
+
+.button_links:disabled {
+  pointer-events: none;
+}
+
+.button_links:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button_links:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
