--- a/style.css
+++ b/style.css
@@ -1,15 +1,75 @@
-//* the body of the main homepage//*
+.body{
+  margin:0;
+  padding:0;
+  background-color: #82846D;
+}
+
 .koru{
   height:100%;
   background-image: url("/images/FernTransparent.png");
   background-color: #82846D;
-  margin:0%;
-  padding:0%;
+  margin:0;
+  padding:0;
 }
 
-//* The main heading for homepage//*
+.koru_header{
+  height:200px;
+  width:100%;
+  background-image: url("/images/FernTransparent.png");
+  background-color: #82846D;
+  padding:0;
+  margin:0;
+}
+
+*{  
+  margin:0;
+ }  
+ .title{  
+  cursor:pointer;  
+ }  
+ /*Properties for Nav-bar*/  
+ .navbar{  
+  display:flex;  
+  top:0;  
+  height:10vh;  
+  justify-content:space-between;  
+  align-items:center;   
+  padding:0px 20px;  
+  background:transparent;  
+ }  
+ .nav-sub{  
+  display:flex;  
+  justify-content:space-between;  
+ }  
+ .list-item {  
+  padding:10px;  
+  list-style:none;  
+ }  
+ .nav-link{  
+  color:inherit;  
+  text-decoration:none;  
+ }  
+ /*Properties for Hamburger*/  
+ .ham{  
+  display:none;  
+  padding:5px;  
+  cursor:pointer;  
+ }  
+ .bar1,.bar2,.bar3{  
+  display:block;  
+  width:35px;  
+  height:3px;  
+  margin:5px auto;  
+  background-color:#101010;  
+  transition: 0.4s;  
+ }
+
 .Main_Text_Container{
   font-size:40px;
+  position: fixed;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
 }
 
 h1{
@@ -23,164 +83,17 @@ h2{
 p{
   font-family: 'Hind Siliguri', sans-serif;
 }
-
-/*
- * Made by Erik Terwan
- * 24th of November 2015
- * MIT License
- *
- *
- * If you are thinking of using this in
- * production code, beware of the browser
- * prefixes.
- */
+font-family: 'Zen Antique', serif;
 
 
-
-#menuToggle
-{
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  
-  z-index: 1;
-  
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle a
-{
-  text-decoration: none;
-  color: #232323;
-  
-  transition: color 0.3s ease;
-}
-
-#menuToggle a:hover
-{
-  color: tomato;
-}
-
-
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -50px;
-  left: -5px;
-  
-  cursor: pointer;
-  
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
-  -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  
-  background: #cdcdcd;
-  border-radius: 3px;
-  
-  z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu
-{
-  position: absolute;
-  width: 300px;
-  margin: -100px 0 0 -50px;
-  padding: 50px;
-  padding-top: 125px;
-  
-  background: #ededed;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-  
-  transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-#menu li
-{
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: none;
-}
 .buttons_container{
-  width:30%;
+  width:100%;
+  position: fixed;
+  left:50%;
+  top:60%;
+  transform: translate(-25%, 10%);
 }
+
 .button_links {
   appearance: none;
   background-color: #FBFCFF;
@@ -191,8 +104,6 @@ p{
   cursor: pointer;
   display: inline-block;
   font-size: 10px;
-  font-family: 'Zen Antique', serif;
-  font-color: #3D3D3D;
   line-height: normal;
   margin: 0;
   min-height: 50px;
@@ -223,3 +134,135 @@ p{
   box-shadow: none;
   transform: translateY(0);
 }
+
+#AboutUs_text_box{
+  padding:40px;
+  margin:0;
+}
+
+/*Designing the form*/
+
+form{
+    width: 75%;
+    margin: 25px auto 0 auto;
+    color:#3d3d3d;
+    z-index: 1;
+}
+
+form h3{
+    font-size:2em;
+    margin: 0 0 25px 0;
+}
+
+form div{
+    margin: 0 0 15px 0;
+    position: relative;
+}
+
+form > div:last-of-type {
+    margin-top: 20px;
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
+}
+
+form input,
+form textarea {
+    padding: 5px 12px;
+    outline: none;
+    border: 1px solid rgba(0,0,0,0);
+    width:80%;
+    color: #000000;
+    font-size: .9em;
+    background-color: rgba(255,255,255, 0.4);
+}
+
+form input[type="submit"] {
+    width: auto;
+    padding: 5px 20px;
+    cursor: pointer;
+    font-size: .8em;
+    color: #3d3d3d;
+    border: 1px solid #fff;
+    background-color: #598234;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    
+}
+
+form input [type="checkbox"] {
+    width: auto;
+    position: relative;
+    top: -2px;
+}
+
+form input [type="checkbox"] + label {
+    display: inline;
+    padding-left: 10px;
+    font-style: normal;
+}
+
+/*Create a rule that targets the input fields that have a required attribute*/
+
+input:required{
+    border: 1px solid #598234;
+}
+
+/*Target the label element that appears straight after an input field that has a required attribute in HTML*/
+
+input:required + label {
+    color: #598234;
+}
+
+/*Create a pseudo-element (*) after each of the required labels */
+input:required + label::after{
+    content:'requred';
+    font-style:italic;
+    padding-left: 10px;
+    font: .8em;
+}
+
+input:required + label::before {
+    content:'';
+    position:absolute;
+    top: -2px;
+    left: -25px;
+    display: block;
+    width: 20px;
+    height: 40px;
+    background: url(images/favicon.png) no-repeat 0 0;
+    background-size: contain;
+ 
+
+@media only screen and (max-width:768px){  
+ *{  
+   overflow:hidden;  
+  }  
+ .nav-sub{  
+   position:absolute;   
+   top:10vh;  
+   right:0px;  
+   flex-direction:column;  
+   background-color:transparent;  
+   border-radius:0px 0px 0px 20px;  
+   transition:transform 0.3s ease-in;  
+   transform:translate(100%);  
+  }  
+ .nav-change{  
+   transform:translate(0%);  
+  }  
+ .ham{  
+   display:block;  
+  }  
+ .change .bar1 {  
+  transform: rotate(45deg) translate(8px,3px);  
+ }  
+ .change .bar2 {  
+  opacity: 0;  
+ }  
+ .change .bar3 {  
+  transform: rotate(-45deg) translate(8px,-3px);  
+ }
