--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   background-color: #82846D;
 }
 
+/*For main homescreen */
 .koru{
   height:100%;
   background-image: url("/images/FernTransparent.png");
@@ -12,6 +13,7 @@
   padding:0;
 }
 
+/*header div for all the webpages*/
 .koru_header{
   height:200px;
   width:100%;
@@ -21,12 +23,15 @@
   margin:0;
 }
 
+/*for hamburger menu*/ 
 *{  
   margin:0;
  }  
+ 
  .title{  
   cursor:pointer;  
- }  
+ }
+
  /*Properties for Nav-bar*/  
  .navbar{  
   display:flex;  
@@ -36,25 +41,30 @@
   align-items:center;   
   padding:0px 20px;  
   background:transparent;  
- }  
- .nav-sub{  
+ }
+
+  .nav-sub{  
   display:flex;  
   justify-content:space-between;  
- }  
+ }
+
  .list-item {  
   padding:10px;  
   list-style:none;  
- }  
+ }
+
  .nav-link{  
   color:inherit;  
   text-decoration:none;  
- }  
+ }
+
  /*Properties for Hamburger*/  
  .ham{  
   display:none;  
   padding:5px;  
   cursor:pointer;  
- }  
+ }
+
  .bar1,.bar2,.bar3{  
   display:block;  
   width:35px;  
@@ -72,6 +82,7 @@
   transform: translate(-50%, -50%);
 }
 
+/* for text */
 h1{
   font-family:'Roboto Condensed', sans-serif;
 }
@@ -86,6 +97,7 @@ p{
 font-family: 'Zen Antique', serif;
 
 
+/*buttons */
 .buttons_container{
   width:100%;
   position: fixed;
@@ -116,7 +128,7 @@ font-family: 'Zen Antique', serif;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 50%;
+  width: 20%;
   height:20%;
   will-change: transform;
 }
@@ -183,7 +195,7 @@ form input[type="submit"] {
     font-size: .8em;
     color: #3d3d3d;
     border: 1px solid #fff;
-    background-color: #598234;
+    background-color: #82846D;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -208,13 +220,13 @@ form input [type="checkbox"] + label {
 /*Create a rule that targets the input fields that have a required attribute*/
 
 input:required{
-    border: 1px solid #598234;
+    border: 1px solid #82846D;
 }
 
 /*Target the label element that appears straight after an input field that has a required attribute in HTML*/
 
 input:required + label {
-    color: #598234;
+    color: #82846D;
 }
 
 /*Create a pseudo-element (*) after each of the required labels */
@@ -235,7 +247,162 @@ input:required + label::before {
     height: 40px;
     background: url(images/favicon.png) no-repeat 0 0;
     background-size: contain;
+} 
+
+.hero_image_box{
+  float: left;
+  background-image: url("/images/Isabelle.jpg");
+}
+
+/** for the slideshow **/
+#slider {
+  position: relative;
+  width: 500px;
+  height: 265px;
  
+  overflow: hidden;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+}
+#slider ul {
+  position: relative;
+  list-style: none;
+  height: 100%;
+  width: 10000%;
+  padding: 0;
+  margin: 0;
+  transition: all 750ms ease;
+  left: 0;
+}
+#slider ul li {
+  position: relative;
+  height: 100%;
+ 
+  float: left;
+}
+#slider ul li img{
+  width: 500px;
+  height: 265px;
+  border-radius: 50%;
+}
+ 
+#slider #prev, #slider #next {
+  width: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  font-size: 2rem;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 150ms ease;
+}
+#slider #prev:hover, #slider #next:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  text-shadow: 0;
+}
+#slider #prev {
+  left: 10px;
+}
+#slider #next {
+  right: 10px;
+}
+
+/* code for slider in about us */
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
 
 @media only screen and (max-width:768px){  
  *{  
@@ -246,7 +413,7 @@ input:required + label::before {
    top:10vh;  
    right:0px;  
    flex-direction:column;  
-   background-color:transparent;  
+   background-color:#FBFCFF;  
    border-radius:0px 0px 0px 20px;  
    transition:transform 0.3s ease-in;  
    transform:translate(100%);  
@@ -266,3 +433,4 @@ input:required + label::before {
  .change .bar3 {  
   transform: rotate(-45deg) translate(8px,-3px);  
  }
+}
